# CPU-Simulation

./: CMakeLists.txt  README.md  instructions.txt
include/: CPU.h  Instruction.h  InstructionFactory.h  Memory.h
include/instructions/: AddInstruction.h  AddiInstruction.h  ExitInstruction.h  JMPInstruction.h  PrintInstruction.h  SetInstruction.h
src/: CPU.cpp  Instruction.cpp  InstructionFactory.cpp  RAM.cpp  ROM.cpp  main.cpp
src/instructions/: AddInstruction.cpp  AddiInstruction.cpp  ExitInstruction.cpp  JMPInstruction.cpp  PrintInstruction.cpp  SetInstruction.cpp
src/memory/: RAM.cpp  ROM.cpp
